refactor: tag exception common에 만들어 상속받아 사용(exception이름 명시)